--- a/index-en.html
+++ b/index-en.html
@@ -299,6 +299,36 @@
                         </a>
                     </div>
                 </div>
+                <div class="project-6">
+                    <img src="images/projects/Day_Tracker.png" alt="Day_Tracker">
+                    <div class="details">
+                        <div class="description">
+                            <h4>Day Tracker</h4>
+                            <p>My own application to track the progress of tasks. It’s demo version. The application is
+                                programmed using JavaScript (ES6). The base function is adding tasks to be done and the
+                                ability to change their status to completed. The app contains a counter that summarizes
+                                the progress of tasks. There is also an option of sticky notes - adding notes that can
+                                be freely changed (this option is available only in the desktop version). The current
+                                date and time are also displayed. The app is adapted for mobile devices ( by Media
+                                queries). </p>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-javascript-plain"></i>
+                            <i class="devicon-sass-original"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/Day-Tracker/" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/Day-Tracker" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
