--- a/index.html
+++ b/index.html
@@ -322,6 +322,38 @@
                         </a>
                     </div>
                 </div>
+                <div class="project-6">
+                    <img src="images/projects/Day_Tracker.png" alt="Day_Tracker">
+                    <div class="details">
+                        <div class="description">
+                            <h4>Day Tracker</h4>
+                            <p>Autorska aplikacja do śledzenia postępów realizacji zadań. Wersja demo. Aplikacja
+                                jest zaprogramowana za pomoca JavaScript(ES6). Kluczowa funkcjonalność to możliwość
+                                dodawania zadań do wykonania
+                                oraz możliwość zmiany ich statusu na wykonane. W aplikację wbudowany jest licznik,
+                                który podsumowuje postępy realizacji. Dostępna jest też opcja sticky notes -
+                                dodawanie notatek których można dowolnie zmieniać położenie (opcja dostęna tylko w
+                                wersji desktopowej). Wyświetlana jest również aktualna
+                                data i godzina. Apka jest dostosowana na mobilne urzadzenia (Media
+                                queries). </p>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-javascript-plain"></i>
+                            <i class="devicon-sass-original"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/Day-Tracker/" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/Day-Tracker" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
 
                 <!-- empty for next projects-->
             </div>
